[package]
name = "rust-samples"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Sample apps and code demonstrating modern Rust design patterns"
repository = "https://github.com/bellanov/rust-samples"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
proptest = "1.0"

[features]
default = []
json = ["serde", "serde_json"]

[[bin]]
name = "main"
path = "src/bin/main.rs"

[lib]
name = "rust_samples"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
